--- a/assets/styles/variables/_colors.scss
+++ b/assets/styles/variables/_colors.scss
@@ -3,17 +3,17 @@
   --a-white: #fff;
   --a-black: #000;
 
-  --a-mainAccent: #41b883;
+  --a-mainAccent: #0937dd;
 
   // Typography
-  --a-mainText: #1b263b;
+  --a-mainText: #0d0a19;
   --a-headerText: #878c99;
-  --a-accentText: #31b77d;
+  --a-accentText: #1f44ce;
 
   // Background
-  --a-mainBg: #e4e5e1;
-  --a-bgAccent: #2eae7d;
-  --a-bgAccentLight: #e2fbf1;
+  --a-mainBg: #e9eaec;
+  --a-bgAccent: #2a50d8;
+  --a-bgAccentLight: #e2eafb;
   --a-bgLight: #f3f3f3;
 
   // Border
