--- a/components/Main/main.scss
+++ b/components/Main/main.scss
@@ -20,49 +20,69 @@
     text-transform: uppercase;
     opacity: 30%;
     user-select: none;
+  }
 
-    span {
-      text-transform: none;
+  &__gallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: rem(1000);
+    min-width: rem(200);
+
+    &-list {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: rem(200) rem(200) rem(250);
+      grid-template-areas:
+        'item-01 item-01 item-02'
+        'item-03 item-04 item-02'
+        'item-05 item-05 item-06';
+      gap: 1em;
+    }
+
+    &-item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &.item-01 {
+        grid-area: item-01;
+      }
+      &.item-02 {
+        grid-area: item-02;
+      }
+      &.item-03 {
+        grid-area: item-03;
+      }
+      &.item-04 {
+        grid-area: item-04;
+      }
+      &.item-05 {
+        grid-area: item-05;
+      }
+      &.item-06 {
+        grid-area: item-06;
+      }
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
   &__block {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: rem(40);
-    height: rem(40);
-    margin: rem(10);
-  }
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(120px, 1fr));
+    min-width: rem(200);
+    max-width: rem(1000);
 
-  &__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: rem(30);
-    height: rem(30);
-    margin-right: rem(8);
-
-    .nuxt-icon {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: rem(24);
-      height: rem(24);
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: auto;
     }
-  }
-
-  &__lang {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: rem(40);
-    height: rem(40);
-    color: var(--a-accentText);
-    text-transform: uppercase;
-    background-color: var(--a-bgLight);
   }
 }
