--- a/components/Main/main.scss
+++ b/components/Main/main.scss
@@ -114,6 +114,7 @@
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      overflow: hidden;
 
       :hover {
         opacity: 0.5;
@@ -173,22 +174,13 @@
         object-fit: cover;
         width: 100%;
         height: 100%;
+        transition: all 1s;
+
+        &:hover {
+          transform: scale(1.3);
+          transition: all 1s;
+        }
       }
-    }
-  }
-
-  &__block {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(120px, 1fr));
-    min-width: rem(200);
-    max-width: rem(1000);
-
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: auto;
     }
   }
 }
