Состояние у переключателя галерей

--- a/components/_ui/AButton/a_button.scss
+++ b/components/_ui/AButton/a_button.scss
@@ -147,6 +147,7 @@
     }
     &.active,
     &:active {
+      color: var(--a-white);
       background-color: var(--a-mainAccent);
     }
     &.disabled,
