fix(custom): test
test

--- a/components/Main/main.scss
+++ b/components/Main/main.scss
@@ -6,6 +6,12 @@
   align-items: center;
   min-height: 100vh;
 
+  &__title {
+    margin-top: rem(20);
+    margin-bottom: rem(30);
+    color: var(--a-headerText);
+  }
+
   &__logo {
     position: absolute;
     top: 0;
