--- a/components/_ui/AButton/a_button.scss
+++ b/components/_ui/AButton/a_button.scss
@@ -31,99 +31,100 @@
   }
 
   // Size
-  &--xlarge {
-    height: rem(56);
-    & .a-button__label {
-      padding-right: rem(32);
-      padding-left: rem(32);
-    }
-    & .a-button__icon--left {
-      margin-left: rem(32);
-    }
-    & .a-button__icon--right {
-      margin-right: rem(32);
-    }
-    &.a-button--rounded {
-      width: rem(56);
+  &-s {
+    &--xlarge {
       height: rem(56);
-      border-radius: rem(56);
+      & .a-button__label {
+        padding-right: rem(32);
+        padding-left: rem(32);
+      }
+      & .a-button__icon--left {
+        margin-left: rem(32);
+      }
+      & .a-button__icon--right {
+        margin-right: rem(32);
+      }
+      &.a-button--rounded {
+        width: rem(56);
+        height: rem(56);
+        border-radius: rem(56);
+      }
+      &.a-button--square {
+        width: rem(56);
+        height: rem(56);
+      }
     }
-    &.a-button--square {
-      width: rem(56);
-      height: rem(56);
-    }
-  }
-  &--large {
-    height: rem(48);
-    & .a-button__label {
-      padding-right: rem(32);
-      padding-left: rem(32);
-    }
-
-    & .a-button__icon--left {
-      margin-left: rem(32);
-    }
-
-    & .a-button__icon--right {
-      margin-right: rem(32);
-    }
-    &.a-button--rounded {
-      width: rem(48);
+    &--large {
       height: rem(48);
-      border-radius: rem(48);
-    }
-    &.a-button--square {
-      width: rem(48);
-      height: rem(48);
-    }
-  }
+      & .a-button__label {
+        padding-right: rem(32);
+        padding-left: rem(32);
+      }
 
-  &--medium {
-    height: rem(40);
-    & .a-button__label {
-      padding-right: rem(24);
-      padding-left: rem(24);
-    }
+      & .a-button__icon--left {
+        margin-left: rem(32);
+      }
 
-    & .a-button__icon--left {
-      margin-left: rem(24);
+      & .a-button__icon--right {
+        margin-right: rem(32);
+      }
+      &.a-button--rounded {
+        width: rem(48);
+        height: rem(48);
+        border-radius: rem(48);
+      }
+      &.a-button--square {
+        width: rem(48);
+        height: rem(48);
+      }
     }
-
-    & .a-button__icon--right {
-      margin-right: rem(24);
-    }
-    &.a-button--rounded {
-      width: rem(40);
+    &--medium {
       height: rem(40);
-      border-radius: rem(40);
-    }
-    &.a-button--square {
-      width: rem(40);
-      height: rem(40);
-    }
-  }
-  &--small {
-    height: rem(32);
-    & .a-button__label {
-      padding-right: rem(20);
-      padding-left: rem(20);
-    }
+      & .a-button__label {
+        padding-right: rem(24);
+        padding-left: rem(24);
+      }
 
-    & .a-button__icon--left {
-      margin-left: rem(20);
-    }
+      & .a-button__icon--left {
+        margin-left: rem(24);
+      }
 
-    & .a-button__icon--right {
-      margin-right: rem(20);
+      & .a-button__icon--right {
+        margin-right: rem(24);
+      }
+      &.a-button--rounded {
+        width: rem(40);
+        height: rem(40);
+        border-radius: rem(40);
+      }
+      &.a-button--square {
+        width: rem(40);
+        height: rem(40);
+      }
     }
-    &.a-button--rounded {
-      width: rem(32);
+    &--small {
       height: rem(32);
-      border-radius: rem(32);
-    }
-    &.a-button--square {
-      width: rem(32);
-      height: rem(32);
+      & .a-button__label {
+        padding-right: rem(20);
+        padding-left: rem(20);
+      }
+
+      & .a-button__icon--left {
+        margin-left: rem(20);
+      }
+
+      & .a-button__icon--right {
+        margin-right: rem(20);
+      }
+      &.a-button--rounded {
+        width: rem(32);
+        height: rem(32);
+        border-radius: rem(32);
+      }
+      &.a-button--square {
+        width: rem(32);
+        height: rem(32);
+      }
     }
   }
 
@@ -137,106 +138,109 @@
 
   // bgColor & condition
 
-  &--accent {
-    color: var(--a-mainText);
-    background-color: var(--a-bgAccentLight);
-    &.hover,
-    &:hover {
-      color: var(--a-white);
-      background-color: var(--a-bgAccent);
+  &-bg {
+    &--accent {
+      color: var(--a-mainText);
+      background-color: var(--a-bgAccentLight);
+      &.hover,
+      &:hover {
+        color: var(--a-white);
+        background-color: var(--a-bgAccent);
+      }
+      &.active,
+      &:active {
+        color: var(--a-white);
+        background-color: var(--a-mainAccent);
+      }
+      &.disabled,
+      &:disabled {
+        background-color: var(--a-mainAccent);
+        cursor: auto;
+      }
     }
-    &.active,
-    &:active {
-      color: var(--a-white);
-      background-color: var(--a-mainAccent);
-    }
-    &.disabled,
-    &:disabled {
-      background-color: var(--a-mainAccent);
-      cursor: auto;
-    }
-  }
-  &--primary {
-    color: var(--a-baseLight);
-    background-color: var(--colorBgBlackMTI);
-    &.hover,
-    &:hover {
-      background-color: var(--colorBgBlackMTI);
-    }
-    &.active,
-    &:active {
-      background-color: var(--colorBgBlackMTI);
-    }
-    &.disabled,
-    &:disabled {
-      background-color: var(--a-baseLight);
-      cursor: auto;
-    }
-  }
-  &--secondary {
-    color: var(--a-baseLight);
-    background-color: var(--a-mainAccent);
-    &.hover,
-    &:hover {
+    &--primary {
       color: var(--a-baseLight);
-      background-color: var(--a-mainSecond);
+      background-color: var(--colorBgBlackMTI);
+      &.hover,
+      &:hover {
+        background-color: var(--colorBgBlackMTI);
+      }
+      &.active,
+      &:active {
+        background-color: var(--colorBgBlackMTI);
+      }
+      &.disabled,
+      &:disabled {
+        background-color: var(--a-baseLight);
+        cursor: auto;
+      }
     }
-    &.active,
-    &:active {
+    &--secondary {
+      color: var(--a-baseLight);
       background-color: var(--a-mainAccent);
+      &.hover,
+      &:hover {
+        color: var(--a-baseLight);
+        background-color: var(--a-mainSecond);
+      }
+      &.active,
+      &:active {
+        background-color: var(--a-mainAccent);
+      }
+      &.disabled,
+      &:disabled {
+        color: var(--a-color_bg);
+        background-color: var(--a-mainAccent);
+        cursor: auto;
+      }
     }
-    &.disabled,
-    &:disabled {
-      color: var(--a-color_bg);
-      background-color: var(--a-mainAccent);
-      cursor: auto;
+    &--custom {
+      color: var(--a-baseLight);
+      background-color: var(--a-baseDark);
     }
-  }
-  &--custom {
-    color: var(--a-baseLight);
-    background-color: var(--a-baseDark);
-  }
-  &--ghost-accept {
-    color: var(--colorBgBlackMTI);
-    background-color: var(--a-baseLight);
-    border: rem(1) solid var(--a-mainAccent);
-
-    &.hover,
-    &:hover {
-      border: rem(1) solid var(--a-mainSecond);
-    }
-    &.active,
-    &:active {
+    &--ghost-accept {
+      color: var(--colorBgBlackMTI);
+      background-color: var(--a-baseLight);
       border: rem(1) solid var(--a-mainAccent);
+
+      &.hover,
+      &:hover {
+        border: rem(1) solid var(--a-mainSecond);
+      }
+      &.active,
+      &:active {
+        border: rem(1) solid var(--a-mainAccent);
+      }
+      &.disabled,
+      &:disabled {
+        border: rem(1) solid var(--a-borderColor);
+      }
     }
-    &.disabled,
-    &:disabled {
+    &--ghost-primary {
+      box-sizing: border-box;
+      color: var(--a-baseDark);
+      background-color: var(--a-baseLight);
       border: rem(1) solid var(--a-borderColor);
+      &:disabled {
+        color: var(--a-mainLightGray);
+        border: rem(1) solid var(--a-borderColor);
+        cursor: auto;
+      }
+    }
+    &--none {
+      color: var(--a-baseDark);
+      background-color: transparent;
+      &.hover,
+      &:hover {
+        color: var(--a-mainSecond);
+      }
+      &:disabled {
+        color: var(--a-textDarkGray);
+        cursor: auto;
+      }
     }
   }
-  &--ghost-primary {
-    box-sizing: border-box;
-    color: var(--a-baseDark);
-    background-color: var(--a-baseLight);
-    border: rem(1) solid var(--a-borderColor);
-    &:disabled {
-      color: var(--a-mainLightGray);
-      border: rem(1) solid var(--a-borderColor);
-      cursor: auto;
-    }
-  }
-  &--none {
-    color: var(--a-baseDark);
-    background-color: transparent;
-    &.hover,
-    &:hover {
-      color: var(--a-mainSecond);
-    }
-    &:disabled {
-      color: var(--a-textDarkGray);
-      cursor: auto;
-    }
-  }
+
   // OnlyIcon
   &--rounded .a-button__label {
     display: none;
