--- a/components/Main/main.scss
+++ b/components/Main/main.scss
@@ -39,6 +39,7 @@
   }
 
   &__gallery {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,6 +117,7 @@
     }
 
     &-item {
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -123,7 +125,7 @@
       overflow: hidden;
 
       :hover {
-        opacity: 0.5;
+        opacity: 0.9;
       }
 
       &.item-01 {
@@ -186,6 +188,24 @@
           transform: scale(1.3);
           transition: all 1s;
         }
+      }
+    }
+
+    &-link {
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: rem(50);
+      height: rem(26);
+      padding: 0 rem(10);
+      background-color: var(--a-bgAccentLight);
+      z-index: 1;
+
+      span {
+        color: var(--a-headerText);
       }
     }
   }
