--- a/components/Main/main.scss
+++ b/components/Main/main.scss
@@ -153,31 +153,6 @@
         grid-area: item-08;
       }
 
-      &.item-g0 {
-        grid-area: item-g0;
-      }
-      &.item-g1 {
-        grid-area: item-g1;
-      }
-      &.item-g2 {
-        grid-area: item-g2;
-      }
-      &.item-g3 {
-        grid-area: item-g3;
-      }
-      &.item-g4 {
-        grid-area: item-g4;
-      }
-      &.item-g5 {
-        grid-area: item-g5;
-      }
-      &.item-g6 {
-        grid-area: item-g6;
-      }
-      &.item-g7 {
-        grid-area: item-g7;
-      }
-
       img {
         object-fit: cover;
         width: 100%;
@@ -206,6 +181,34 @@
 
       span {
         color: var(--a-headerText);
+      }
+    }
+  }
+
+  &__test-wrapper {
+    display: flex;
+    width: 100%;
+  }
+  &__gallery-test {
+    display: grid;
+    grid-gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 200px;
+    grid-auto-flow: dense;
+
+    &-item {
+      max-height: rem(500);
+      &:nth-of-type(4n) {
+        grid-column: span 2;
+      }
+      &:nth-of-type(5n) {
+        grid-row: span 2;
+      }
+
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
       }
     }
   }
